tests/error/stackcheck.c
#include <chl.h>
#include <stdlib.h>

int
main (void)
{
  chl_err_stack_check ();
  return EXIT_SUCCESS;
}
